Issue 4334: save doesn't work on network shares. The patch as supplied by Andrea (after merging).
git-svn-id: http://argouml.tigris.org/svn/argouml/trunk@10988 a161b567-7d1e-0410-9ef9-912c70fedb3f