@@ -28,7 +28,7 @@ import java.io.ByteArrayOutputStream;
 import java.io.File;
 import java.io.OutputStream;
 import java.io.PrintStream;
-import java.net.URL;
+import java.net.URI;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.Iterator;
@@ -241,20 +241,20 @@ public final class PersistenceManager {
 
 
     /**
-     * @param in the input url which may or may not have a recognised extension
-     * @return the url with default extension added,
+     * @param in the input uri which may or may not have a recognised extension
+     * @return the uri with default extension added,
      *         if it did not have a valid extension yet
      */
-    public URL fixUrlExtension(URL in) {
-        URL newUrl;
+    public URI fixUriExtension(URI in) {
+        URI newUri;
         String n = in.toString();
         n = fixExtension(n);
         try {
-            newUrl = new URL(n);
-        } catch (java.net.MalformedURLException e) {
+            newUri = new URI(n);
+        } catch (java.net.URISyntaxException e) {
             throw new UnexpectedException(e);
         }
-        return newUrl;
+        return newUri;
     }
 
     /**
